--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   fluttertoast: ^8.0.9
   json_annotation: ^4.4.0
+  devicelocale: ^0.5.0
   build_runner: ^2.1.7
   json_serializable: ^6.1.4
   spotify_sdk:
