Playlist functionality completed
The app now makes sure that the songs from the playlist are being played, both when a song is over and when skipping (Next & Previous)

The current functionality uses the play method but the transition could maybe become more smooth by using the queue method.

--- a/build.yaml
+++ b/build.yaml
@@ -3,4 +3,4 @@ targets:
     builders:
       json_serializable|json_serializable:
         generate_for:
-          - lib/webservices/spotify/models/*.dart
+          - "**/webservices/**.dart"
