--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
   intl: ^0.17.0
   http: ^0.13.4
   rxdart: ^0.27.3
@@ -47,7 +48,8 @@ dependencies:
   json_annotation: ^4.4.0
   devicelocale: ^0.5.0
   build_runner: ^2.1.7
-  json_serializable: ^6.1.4
+  geolocator: ^8.2.0
+  json_serializable: ^6.1.5
   spotify_sdk:
     git:
       url: git://github.com/brim-borium/spotify_sdk.git
@@ -64,6 +66,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.4
+
+flutter_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/launcher_icon/android_launcher_icon.png"
+  image_path_android: "assets/launcher_icon/android_launcher_icon.png"
+  image_path_ios: "assets/launcher_icon/ios_launcher_icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
