--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^1.0.3
   shared_preferences: ^2.0.13
   darq: ^1.1.1
+  marquee: ^2.2.1
   auto_size_text: ^3.0.0
   flutter_dotenv: ^5.0.2
   fluttertoast: ^8.0.9
