--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   permission_handler: ^9.2.0
   flutter_svg: ^1.0.3
   shared_preferences: ^2.0.13
+  avatar_glow: ^2.0.2
+  transparent_image: ^2.0.0
   darq: ^1.1.1
   marquee: ^2.2.1
   auto_size_text: ^3.0.0
