--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   mockito: ^5.1.0
   spotify_sdk:
     git:
-      url: git://github.com/brim-borium/spotify_sdk.git
+      url: https://github.com/brim-borium/spotify_sdk.git
       ref: main
 
 
