--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   devicelocale: ^0.5.0
   build_runner: ^2.1.8
   geolocator: ^8.2.0
+  location: ^4.3.0
   json_serializable: ^6.1.5
   flutter_native_splash: ^2.1.1
   mockito: ^5.1.0
