--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dev_dependencies:
     sdk: flutter
   mocktail: ^0.3.0
   bloc_test: ^9.0.3
+  network_image_mock: ^2.0.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
