--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,7 @@ flutter:
     - assets/
     - assets/mock_data/
     - assets/quack_locationtypes/
+    - assets/quack_locationtypes_small/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
