Unit test addition and changes

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ ios/Runner/GoogleService-Info.plist
 .history
 .svn/
 
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -47,3 +48,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/coverage/
