--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   json_serializable: ^6.1.5
   flutter_native_splash: ^2.1.1
   mockito: ^5.1.0
+  uuid: ^3.0.6
   spotify_sdk:
     git:
       url: https://github.com/brim-borium/spotify_sdk.git
